implement login/signup

--- a/client/src/login/login.css
+++ b/client/src/login/login.css
@@ -46,6 +46,10 @@ input {
 	border-color: #777777;
 }
 
+input:invalid {
+	border-color: #FF0000;
+}
+
 .submitButton {
 	width: 50%;  
 	color: white;
