--- a/client/src/home/home.css
+++ b/client/src/home/home.css
@@ -15,13 +15,15 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	z-index: -10;
 }
 
 #home #scramble-info {
 	width: 90%;
 	margin-top: 20px;
+	max-width: 1000px;
 	display: flex;
-	justify-content: center;
+	justify-content: space-between;
 	align-items: center;
 }
 
@@ -40,10 +42,10 @@
 } 
 
 .scramble-control {
-	width: 50px;
-	height: 50px;
+	width: 44px;
+	height: 44px;
 	border-radius: 50%;
-	font-size: 30px;
+	font-size: 20px;
 	box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3);
 	border-width: 0px;
 	background-color: white;
