--- a/client/src/home/home.css
+++ b/client/src/home/home.css
@@ -33,7 +33,7 @@
 	margin: 0;
 	margin-left: 40px;
 	margin-right: 40px;
-	color:rgb(85, 85, 85);
+	color: var(--secondary-text-color);
 } 
 
 #scramble-info #scramble-controls {
@@ -48,9 +48,9 @@
 	font-size: 20px;
 	box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3);
 	border-width: 0px;
-	background-color: white;
+	background-color: var(--primary-color);
 	cursor: pointer;
-	color: rgb(141, 141, 141);
+	color: var(--secondary-text-color);
 	font-weight: 700;
 	transition: all ease 200ms;
 }
@@ -71,12 +71,13 @@
 #timer {
 	font-size: 100px;
 	margin: 0;
-	
+	color: var(--primary-text-color);
 }
 
 .ao {
 	margin: 15px;
 	font-size: 24px;
+	color: var(--secondary-text-color);
 }
 
 #home #user-info {
