--- a/client/src/home/home.css
+++ b/client/src/home/home.css
@@ -33,7 +33,7 @@
 	margin: 0;
 	margin-left: 40px;
 	margin-right: 40px;
-	color: var(--secondary-text-color);
+	color: var(--secondary-color);
 } 
 
 #scramble-info #scramble-controls {
@@ -50,7 +50,7 @@
 	border-width: 0px;
 	background-color: var(--primary-color);
 	cursor: pointer;
-	color: var(--secondary-text-color);
+	color: var(--tertiary-color);
 	font-weight: 700;
 	transition: all ease 200ms;
 }
@@ -77,7 +77,7 @@
 .ao {
 	margin: 15px;
 	font-size: 24px;
-	color: var(--secondary-text-color);
+	color: var(--ao-color);
 }
 
 #home #user-info {
@@ -97,4 +97,8 @@
 #home #user-info * {
 	margin-top: 12px;
 	margin-bottom:0;
+}
+
+#home #user-info {
+	color: var(--tertiary-color);
 }
