--- a/client/src/home/home.css
+++ b/client/src/home/home.css
@@ -48,9 +48,9 @@
 	font-size: 20px;
 	box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3);
 	border-width: 0px;
-	background-color: var(--primary-color);
+	background-color: var(--tertiary-color);
 	cursor: pointer;
-	color: var(--tertiary-color);
+	color: var(--primary-color);
 	font-weight: 700;
 	transition: all ease 200ms;
 }
