--- a/client/src/profile/solves/solves.css
+++ b/client/src/profile/solves/solves.css
@@ -2,24 +2,56 @@
 	margin: 20px;
 }
 
-#solves table {
+#solves h2 {
+	color: var(--tertiary-color);
+}
+
+#solves #stats-container {
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+}
+
+#solves #overall-statistics {
+	margin-bottom: 50px;
+	width: 50%;
+	max-width: 400px;
+	border-spacing: 0;
+}
+
+#solves #overall-statistics td {
+	padding: 5px;
+	color: var(--ao-color);
+	border-width: 0;
+}
+
+#solves #overall-statistics tbody tr:nth-child(odd) {
+	background-color: rgba(0, 0, 0, .1);
+}
+
+#solves #overall-statistics tbody tr:nth-child(even) {
+	background-color: rgba(255, 255, 255, .1);
+}
+
+
+
+#solves #solves-table {
 	border-collapse: collapse;
 	border: 1px solid var(--secondary-color);
 }
 
-
-#solves table thead {
+#solves #solves-table thead {
 	font-size: 24px;
 
 	background-color: var(--secondary-color);
 }
 
-#solves th {
+#solves #solves-table th {
 	color: var(--primary-color);
 	padding: 10px;
 }
 
-#solves td {
+#solves #solves-table td {
 	padding-top: 5px;
 	padding-bottom: 5px;
 	font-size: 20px;
@@ -37,11 +69,66 @@
 	padding-left: 20px;
 }
 
-#solves tbody tr:nth-child(even) {
+#solves #solves-table tbody tr:nth-child(even) {
 	background-color: rgba(0, 0, 0, .1);
 }
 
-#solves tbody tr:nth-child(odd) {
+#solves #solves-table tbody tr:nth-child(odd) {
 	background-color: rgba(255, 255, 255, .1);
 }
-  
+
+
+#solves #buttons button {
+	text-align: center;
+	aspect-ratio: 1;
+	background-color: var(--secondary-color);
+	border: 1px solid var(--primary-color);
+	border-radius: 5px;
+	color: var(--primary-color);
+	height: 100%;
+	margin-right: 7px;
+	cursor: pointer;
+	height: 30px;
+	transition: all ease 120ms;
+}
+
+#solves #buttons button:hover {
+	filter: brightness(90%);
+	box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2);
+}
+
+#solves #buttons-container {
+	position: relative;
+	top: 0;
+	left: 0;
+	width: 100%;
+	
+}
+
+#solves #buttons {
+	user-select: none;
+}
+
+.td-scramble {
+	padding: 0;
+}
+
+.td-scramble #td-p {
+	padding-top: 5px;
+	padding-bottom: 5px;
+	font-size: 20px;
+	text-align: center;
+	color: var(--ao-color);
+	margin: 0;
+}
+
+#solves #buttons {
+	height: 100%;
+	right: 0;
+	position: absolute;
+	margin: 0;
+	transform: translateY(-100%);
+	display: flex;
+	align-items: center;
+	justify-content: flex-end;
+}
